Fixed #16, styling for admin vendor list not showing correctly.

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -778,7 +778,7 @@ input, textarea{
     }
     .desc-box{
       background-color: #fff;
-      width: 300px;
+      width: 320px;
       height: 190px;
       position: absolute;
       padding: 10px 20px;
@@ -880,7 +880,7 @@ input, textarea{
           right: 0;
         }
         .vend-edit{
-          left: 20px;
+          left: 0;
         }
       }
     }
